# hcs

./: Makefile  README.md  hcs.cabal
app/: Main.hs
src/: Client.hs  Server.hs  Types.hs
